--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,15 +13,11 @@ jobs:
     container:
       image: hl7fhir/ig-publisher-base:latest
     steps:
-      - name: With latest sushi
-        run: |
-         gosu publisher /home/publisher/bin/with-latest-sushi.sh &&
-         which sushi &&
-         sushi --version
-      - name: Debug 2
-        run: ls -la /home/publisher/.node/bin && which sushi && sushi --version && pwd && ls -la
-      - name: Update the image to the latest publisher
-        run: curl -L https://github.com/HL7/fhir-ig-publisher/releases/latest/download/publisher.jar -o ./publisher.jar --create-dirs
+      - name: Gather prerequisites
+        run: >
+          gosu publisher /home/publisher/bin/with-latest-sushi.sh &&
+          _updatePublisher.sh -y
+
       - name: Checkout medigree/core to ./core
         uses: actions/checkout@v2
         with:
